internal/fpconfig/test/test_pipelines/invalid_pipelines/bad_output_reference.fp
pipeline "bad_output_reference" {


    step "echo" "echo" {
        text = "Hello World"
    }

    output "echo" {
        value = step.echo.does_not_exist
    }
}